--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-12 text-center">
+		<h3><%= message %></h3>
 			<h1>Your ToDo List...</h1>
 			<form class="form-inline" action="/addItem" method="post">
 				<div class="form-group">
@@ -35,12 +36,14 @@
 				<th>Edit</th>
 				<th>Delete</th>
 			</tr>
+			<% for(let i = 0; i<taskArray.length; i++) {%>
 			<tr>
-				<td>-</td>
-				<td>-</td>
+				<td><%=taskArray[i].taskName%></td>
+				<td><%=taskArray[i].taskDate%></td>
 				<td><button class="btn btn-warning">Edit</button></td>
 				<td><button class="btn btn-danger">Delete</td>
 			</tr>
+			<%}%>
 			</table>
 		</div>
 	</div>
